--- a/Demo.ipynb
+++ b/Demo.ipynb
@@ -15,7 +15,7 @@
     }
    ],
    "source": [
-    "print(9+2)" // addition of two numbers
+    "print(9+2)" // addition of two numbers.
    ]
   },
   {
